--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
 cmake_minimum_required(VERSION 3.15)
-project(opus_l_prep LANGUAGES CXX)
+project(Microservices)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Main service
-add_executable(microservice src/main.cpp)
-target_include_directories(microservice PRIVATE include)
-find_package(Threads REQUIRED)
-target_link_libraries(microservice PRIVATE Threads::Threads)
-# GoogleTest
-enable_testing()
-add_subdirectory(tests)
+# Include httplib globally (adjust path if needed)
+include_directories(include)
+
+# Include each service's CMakeLists.txt
+add_subdirectory(ServiceB)
+add_subdirectory(ServiceA)
