Change CI branch from 'main' to 'master'

--- a/.github/workflows/podman-composed.yaml
+++ b/.github/workflows/podman-composed.yaml
@@ -2,9 +2,9 @@ name: Microservices CI with Podman on UBI
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   microservices-ci:
