--- a/.github/workflows/podman-composed.yaml
+++ b/.github/workflows/podman-composed.yaml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      - name: Login to GitHub Container Registry
+        run: echo ${{ secrets.GITHUB_TOKEN }} | podman login ghcr.io -u ${{ github.actor }} --password-stdin
+        
       - name: Install Podman, Python 3, and podman-compose
         run: |
           sudo apt-get update
