--- a/.github/workflows/proto-doc.yml
+++ b/.github/workflows/proto-doc.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GHCR_PAT }}
           publish_dir: ./docs
           publish_branch: gh-pages
