--- a/ServiceA/Dockerfile
+++ b/ServiceA/Dockerfile
@@ -1,14 +1,14 @@
-# FROM registry.access.redhat.com/ubi9/ubi:latest
+FROM registry.access.redhat.com/ubi9/ubi:latest
 
-# RUN dnf install -y \
-#     gcc gcc-c++ make \
-#     cmake git wget unzip  && \
-#     dnf clean all
-From ghcr.io/st3ff3nbusch/sevice:latest
-RUN dnf install -y wget
+ RUN dnf install -y \
+     gcc gcc-c++ make \
+     cmake git wget unzip  && \
+     dnf clean all
+#From ghcr.io/st3ff3nbusch/sevice:latest
+#RUN dnf install -y wget
 WORKDIR /app
 COPY . .
-
+RUN rm -fR build/*
 # Include httplib header
 RUN mkdir -p /usr/local/include && \
     wget https://raw.githubusercontent.com/yhirose/cpp-httplib/master/httplib.h -O /usr/local/include/httplib.h
