--- a/ServiceA/Dockerfile
+++ b/ServiceA/Dockerfile
@@ -1,11 +1,11 @@
-FROM registry.access.redhat.com/ubi9/ubi:latest
+#FROM registry.access.redhat.com/ubi9/ubi:latest
 
- RUN dnf install -y \
-     gcc gcc-c++ make \
-     cmake git wget unzip  && \
-     dnf clean all
-#From ghcr.io/st3ff3nbusch/sevice:latest
-#RUN dnf install -y wget
+#  RUN dnf install -y \
+#      gcc gcc-c++ make \
+#      cmake git wget unzip  && \
+#      dnf clean all
+From ghcr.io/st3ff3nbusch/sevice:latest
+RUN dnf install -y wget
 WORKDIR /app
 COPY . .
 RUN rm -fR build/*
