--- a/.github/workflows/podman-composed.yaml
+++ b/.github/workflows/podman-composed.yaml
@@ -1,3 +1,4 @@
+
 name: Microservices CI with Podman
 
 on:
@@ -22,12 +23,13 @@ jobs:
           pip3 install --user podman-compose
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      - name: Build services with podman-compose
+        run: |
+          podman-compose -f podman-composed.yaml build 
       - name: Start services with podman-compose
         run: |
           podman kill --all
           podman-compose -f podman-composed.yaml up -d 
-          podman-compose -f podman-composed.yaml logs -f
-
       - name: Wait for services to start
         run: sleep 15
 
